# yuuskel

./: Cargo.toml  README.md  justfile
src/: README.tpl.md  main.rs
src/docs/: readme.en.md  usage.en.md  usage.zh.md
src/licenses/: agpl-3.0  apache-2.0  gpl-3.0  lgpl-3.0  mpl-2.0
