[package]
name = "yuuskel"
version = "1.0.3"
edition = "2024"
description = "Initialize standardized, reproducible project directories"
license = "MIT"
repository = "https://github.com/UynajGI/yuuskel"                         # 可选但推荐
homepage = "https://github.com/UynajGI/yuuskel"

[dependencies]
dialoguer = "0.12"
chrono = "0.4"
colored = "3.0"
